[gd_scene load_steps=2 format=3 uid="uid://bwsyw5unkedyl"]

[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_1oqni"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_1oqni")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Menu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="Menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "game_over"

[node name="Actions" type="VBoxContainer" parent="Menu"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="RetryButton" type="Button" parent="Menu/Actions"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "retry"

[node name="MainMenuButton" type="Button" parent="Menu/Actions"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "open_main_menu"

[node name="ExitButton" type="Button" parent="Menu/Actions"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "exit"
